Bug 1764171 - Return border box-sizing values from GetIntrinsicCoord r=emilio

Fixes a bug where border box-sizing was not used. This affected
min-/max-content and fit-content values for min-/max-width.

Differential Revision: https://phabricator.services.mozilla.com/D156289